--- a/server/package.json
+++ b/server/package.json
@@ -21,13 +21,13 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "firebase-admin": "^13.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3"
   }
