--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.4.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3"
   }
