--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -29,6 +32,7 @@
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3"
   }
