--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -33,7 +35,6 @@
     "firebase-admin": "^13.4.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.5",
-    "ts-node": "^10.9.2",
     "tsx": "^4.20.3"
   }
 }
