--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec tsx src/server.ts",
-    "start": "node dist/server.js",
-    "postinstall": "npm run build"
+    "dev": "nodemon --exec \"npx tsx\" src/server.ts",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "jj",
@@ -19,6 +18,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
@@ -26,7 +26,6 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/nodemailer": "^6.4.17",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
